# transcriber-telegrambot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  oldpyproject.toml  output.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  pull_request.yml
src/: lib.rs  main.py  main.rs
src/transcriber_telegrambot/: main.py
src/transcription/: transcript.rs
tests/: test_transcriber_telegrambot.py
