[package]
name = "transcriber_telegrambot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "transcriber_telegrambot"

[dependencies]
axum = "0.6.20"
log = "0.4.20"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.32", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
tokio-stream = "0.1.14"
url = "2.4.1"
