[tool.poetry]
name = "transcriber_telegrambot"
version = "0.1.0"
description = ""
authors = ["adrianvillanueva997 <adrianvillanueva997@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.10 <4"
ffmpeg-python = "^0.2.0"
vosk = "^0.3.45"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
