[project]
name = "transcriber-telegrambot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "adrianvillanueva997", email = "adrianvillanueva997@gmail.com" }
]
dependencies = [
    "asyncio>=3.4.3",
    "python-telegram-bot>=20.8",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "vosk>=0.3.44",
    "prometheus-client>=0.20.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "transcriber_telegrambot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pylama>=8.4.1",
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber_telegrambot"]
